Bug 1505798 - The used storage space for saved cookies,site data, cache displayed in about:preferences is abnormal after enabling NextGen Storage; r=asuth

This patch fixes an oversight when an important hashtable lookup was only done
in debug builds.